--- a/recipes/static/css/app.css
+++ b/recipes/static/css/app.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-html, button, select, textarea, input {
+html,
+button,
+select,
+textarea,
+input {
   font-family: 'Roboto';
   font-size: 16px;
 }
@@ -28,26 +32,29 @@ button.button {
 }
 
 button.button:hover {
-  background-color: white;
-  border-color: #E012AD;
-  color: #E012AD;
+  background-color: rgb(152, 18, 18);
+  border-color: #3f12e0;
+  color: #12e03f;
 }
 
 button.button:active {
   background-color: lightblue;
 }
 
-input, textarea {
-  border: 1px solid #E012AD;
+input,
+textarea {
+  border: 1px solid #12a9e0;
   border-radius: 4px;
   padding: 1em 1.5em;
+  transition: width 0.4s ease-in-out;
 }
 
 table {
   margin: auto;
 }
 
-td, th {
+td,
+th {
   padding: .25em .5em;
 }
 
@@ -74,16 +81,19 @@ textarea {
   margin: 4em auto;
   min-width: 300px;
   max-width: 800px;
+  transition: width 0.4s ease-in-out;
 }
 
 .recipe-form p {
   display: grid;
   grid-template-columns: 8em 1fr;
   column-gap: 20px;
+  transition: width 0.4s ease-in-out;
 }
 
 .recipe-form label {
   text-align: right;
+  transition: width 0.4s ease-in-out;
 }
 
 .recipe-detail {
@@ -99,4 +109,8 @@ textarea {
 
 .control {
   text-align: right;
+}
+
+.h2-steps {
+  color: blueviolet
 }
