--- a/recipes/templates/recipes/detail.html
+++ b/recipes/templates/recipes/detail.html
@@ -36,6 +36,9 @@
       Created on {{ recipe.created }} |
       Updated on {{ recipe.updated }}
     </p>
+    <div>
+      <embed <iframe width="560" height="315" src="https://www.youtube.com/embed/FcEVbVrNIyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <p>Tags: {% for tag in recipe.tags.all %}{{ tag.word }} {% endfor %}</p>
     <p>{{ recipe.description }}</p>
     <h2>Ingredients</h2>
@@ -56,7 +59,9 @@
         {% endfor %}
       </tbody>
     </table>
+    <div class = "h2-steps">
     <h2>Steps</h2>
+    </div>
     <ol>
       {% for step in recipe.steps.all %}
         <li>{{ step.directions }}</li>
